all problems fixed and bugs fixed
