# internal/controller/http/v1/handler/auth.go
@@ -13,6 +13,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+
 // Login godoc
 // @Router /auth/login [post]
 // @Summary Login
@@ -49,7 +50,7 @@ func (h *Handler) Login(ctx *gin.Context) {
 		h.ReturnError(ctx, config.ErrorForbidden, "Admin can only login to admin web", http.StatusBadRequest)
 		return
 	}
-
+	fmt.Println(user.Password)
 	if !hash.CheckPasswordHash(body.Password, user.Password) {
 		h.ReturnError(ctx, config.ErrorInvalidPass, "Incorrect password", http.StatusBadRequest)
 		return
